# Picarones

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  BACKLOG_POST_LIVRAISON.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.en.md  SECURITY.md  SPECS.md  app.py  codecov.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  picarones.spec  pyproject.toml  rapport_demo.html  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  perf_regression.yml  precommit.yml  release.yml  sbom.yml  sync_to_huggingface.yml
.well-known/: security.txt
docs/: api-stable.md  architecture-cercles.md  architecture.md  cli-workflows.md  index.md  profiles.md
docs/api/: adapters.md  app.md  domain.md  evaluation.md  index.md  pipeline.md
docs/archive/: README.md  changelog-pre-v2.md
docs/audits/: institutional-readiness-2026-05.md  remediation-plan-2026-05.md
docs/case-studies/: 01-registres-paroissiaux.md  02-edition-critique.md  README.md
docs/developer/: doc-consistency.md  extending-glossary.en.md  extending-glossary.md  extending-i18n.en.md  extending-i18n.md  index.en.md  index.md  module-policy.md  narrative-engine.en.md  narrative-engine.md
docs/explanation/: architecture.md  narrative-engine.en.md  narrative-engine.md
docs/how-to/: cli-workflows.md  install-troubleshooting.md  install.md
docs/legal/: THIRD_PARTY_LICENSES.md  dpa-template.md
docs/migration/: SESSION_HANDOVER.md  executor-equivalence.md  legacy-retirement-plan.md  option_b_test_inventory.md  option_b_user_guide.md  pipeline-convergence-plan.md  regression-tolerances.md  rewrite-status-s46.md
docs/operations/: accessibility.md  data-retention-rgpd.md  deployment-institutional.md  observability.md  release-process.md  rollback.md  runbook.md  supply-chain.md
docs/reference/: alto-view.md  api-stable.md  comparing-views.md  normalization-profiles.md  reproducibility-snapshots.md  specification.md  text-view.md  views.md
docs/roadmap/: backlog.md  evolution-2026.md  rewrite-2026.md
docs/security/: threat-model.md
docs/tutorials/: first-benchmark.md  reading-a-report.en.md  reading-a-report.md  writing-a-pipeline-module.md
docs/user/: reading-a-report.en.md  reading-a-report.md  writing-a-pipeline-module.md
docs/views/: alto-view.md  comparing-views.md
examples/pipelines/: README.md  ocr_to_alto.yaml
picarones/: __init__.py  __main__.py  cli.py  fixtures.py  i18n.py
picarones/adapters/: __init__.py  _image.py  _retry.py  output_paths.py
picarones/app/: __init__.py  results.py
picarones/cli/: __init__.py  _history.py  _imports.py  _pipeline.py  _robustness.py  _serve.py  _workflows.py
picarones/core/: __init__.py  abbreviations.py  alto_metrics.py  baseline_comparison.py  builtin_hooks.py  builtin_metrics.py  calibration.py  char_scores.py  colors.py  confusion.py  corpus.py  cost_projection.py  diff_utils.py  difficulty.py  early_modern_typography.py  equivalence_profile.py  error_absorption.py  facts.py  hallucination.py  history.py  image_predictive.py  image_quality.py  incremental_comparison.py  inter_engine.py  jobs.py  layout.py  levers.py  lexical_modernization.py  line_metrics.py  longitudinal.py  marginal_cost.py  metric_hooks.py  metric_registry.py  metrics.py  modern_archives.py  module_policy.py  modules.py  mufi.py  ner.py  ner_backends.py  (+33 more)
picarones/data/: pricing.yaml
picarones/domain/: __init__.py  artifact_key.py  artifacts.py  corpus.py  documents.py  errors.py  evaluation_spec.py  facts.py  module_protocol.py  pipeline_spec.py  projection_spec.py  provenance.py  run_manifest.py  run_result.py
picarones/engines/: __init__.py  azure_doc_intel.py  base.py  factory.py  google_vision.py  mistral_ocr.py  pero_ocr.py  tesseract.py
picarones/evaluation/: __init__.py  _diff_utils.py  benchmark_result.py  benchmark_result_ranking.py  corpus.py  evaluation_engine.py  metric_hooks.py  metric_registry.py  metric_result.py  pipeline.py  pipeline_benchmark.py  pipeline_comparison.py  projection_engine.py  synthetic.py
picarones/extras/: __init__.py
picarones/formats/: __init__.py  _xml_utils.py
picarones/importers/: __init__.py  _http.py  escriptorium.py  gallica.py  htr_united.py  huggingface.py  iiif.py
picarones/interfaces/: __init__.py
picarones/llm/: __init__.py  anthropic_adapter.py  base.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py
picarones/measurements/: __init__.py  abbreviations.py  alto_metrics.py  baseline_comparison.py  builtin_hooks.py  builtin_metrics.py  calibration.py  char_scores.py  confusion.py  cost_projection.py  difficulty.py  early_modern_typography.py  equivalence_profile.py  error_absorption.py  history.py  (+49 more)
scripts/: gen_readme_tables.py  gen_sbom.py  rename_sprint_tests.py  triage_sprint_comments.py
tests/: _migration_helpers.py  conftest.py  test_alto_baseline.py  test_chantier4.py  test_chantier5.py  test_char_scores.py  test_corpus.py  test_diff_utils.py  test_engines.py  test_metric_hooks.py  test_metrics.py  test_minimal_install.py  test_phaseA_migration.py  test_phaseB_migration.py  test_phaseC_migration.py  test_phaseE_migration.py  test_pricing_degenerate_cases.py  test_public_api.py  test_register_default_metrics.py  test_report.py  test_reproducibility_ops.py  test_results.py  test_sprint10_error_distribution.py  test_sprint11_i18n_english.py  test_sprint12_nouvelles_fonctionnalites.py  test_sprint13_parallelisation_stats.py  test_sprint14_robust_filtering.py  test_sprint15_llm_pipeline_bugs.py  test_sprint16_narrative_foundations.py  test_sprint17_jinja2_refactor.py  test_sprint18_friedman_nemenyi_cdd.py  test_sprint19_narrative_engine.py  test_sprint20_pareto_pricing.py  test_sprint21_glossary_customize.py  test_sprint22_docs_case_studies.py  test_sprint23_anti_hallucination.py  test_sprint24_security.py  test_sprint25_web_jinja_refactor.py  test_sprint26_jobs_persistence.py  test_sprint27_reproducibility_snapshots.py  (+77 more)
(+1085 files in other folders)
